[project]
name = "rqlite"
version = "0.1.0"
description = "DB-API 2.0 client and SQLAlchemy dialect for rqlite distributed SQLite clusters"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.33.1",
    "aiohttp>=3.9.0",
    "sqlalchemy>=2.0.49",
]

[project.entry-points."sqlalchemy.dialects"]
rqlite = "rqlite.sqlalchemy.dialect:RQLiteDialect"
"rqlite.aiorqlite" = "rqlite.sqlalchemy.async_dialect:AioRQLiteDialect"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
