[project]
name = "tangled-pyrqlite"
version = "0.1.8a"
description = "DB-API 2.0 client and SQLAlchemy dialect for rqlite distributed SQLite clusters"
authors = [
    { name = "Tangled", email = "noreply@tangledgroup.com" },
    { name = "Marko Tasic", email = "mtasic85@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = [ "rqlite", "aiorqlite", "sqlite", "aiosqlite", "tangled-rqlite" ]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.34.2",
    "aiohttp>=3.14.3",
    "sqlalchemy>=2.0.51",
]

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/tangledgroup/tangled-pyrqlite"
Issues = "https://github.com/tangledgroup/tangled-pyrqlite/issues"
Changelog = "https://github.com/tangledgroup/tangled-pyrqlite/blob/main/CHANGELOG.md"

[project.entry-points."sqlalchemy.dialects"]
rqlite = "rqlite.sqlalchemy.dialect:RQLiteDialect"
"rqlite.aiorqlite" = "rqlite.sqlalchemy.async_dialect:AioRQLiteDialect"

[project.optional-dependencies]
redis = ["redis>=8.0.1"]
valkey = ["valkey>=6.1.1"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "redis>=8.0.1",
    "valkey>=6.1.1",
    "ruff>=0.16.0",
    "ty>=0.0.63",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ty.environment]
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
